force-app/main/default/objects/Projet__c/Projet__c.object-meta.xml
<CustomObject>
    <label>Projet</label>
    <nameField>
        <label>🗒️ Projet Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>