force-app/main/default/objects/Projet__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Client concerné</description>
    <inlineHelpText>Client concerné</inlineHelpText>
    <label>🏢 Client concerné</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Projets</relationshipLabel>
    <relationshipName>Clients</relationshipName>
    <type>Lookup</type>
</CustomField>