force-app/main/default/objects/Projet__c/fields/actual_cost__c.field-meta.xml
<CustomField>
    <fullName>actual_cost__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Montant prévisionnel du projet</description>
    <inlineHelpText>Montant prévisionnel du projet</inlineHelpText>
    <label>💵 Montant réel</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>