force-app/main/default/objects/Projet__c/fields/annee__c.field-meta.xml
<CustomField>
    <fullName>annee__c</fullName>
    <label>annee de création</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>