force-app/main/default/objects/Projet__c/fields/Avancement_des_taches_du_projet__c.field-meta.xml
<CustomField>
    <fullName>Avancement_des_taches_du_projet__c</fullName>
    <description>Ratio évolution des tâches</description>
    <formula>&quot;📊 AVANCEMENT DES TÂCHES : &quot; &amp; 
TEXT(ROUND((completed_tasks__c / total_taches__c) * 100, 0)) &amp; &quot;%&quot; &amp;
&quot; (&quot; &amp; TEXT(completed_tasks__c) &amp; &quot; Terminées / &quot; &amp; TEXT(total_taches__c) &amp; &quot; Total)&quot; &amp;
BR() &amp;
&quot;📈 DÉTAILS : &quot; &amp; 
TEXT(Tasks_in_progress__c) &amp; &quot; en cours | &quot; &amp; 
TEXT(overdueTasks__c) &amp; &quot; en retard&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Ratio évolution des tâches</inlineHelpText>
    <label>Avancement des tâches</label>
    <type>Text</type>
</CustomField>