force-app/main/default/objects/Projet__c/fields/budget_c__c.field-meta.xml
<CustomField>
    <fullName>budget_c__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Budget prévisionnel</description>
    <inlineHelpText>Budget prévisionnel</inlineHelpText>
    <label>💰Montant prévu</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>