force-app/main/default/objects/Projet__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>Type de projet</description>
    <inlineHelpText>Type de projet</inlineHelpText>
    <label>📁 Type de projet</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>. Tableaux de Bord de Performance (BI)</fullName>
                <default>true</default>
                <label>Tableaux de Bord de Performance (BI)</label>
            </value>
            <value>
                <fullName>CMS</fullName>
            </value>
            <value>
                <fullName>Développement</fullName>
            </value>
            <value>
                <fullName>Digitalisation des PME</fullName>
            </value>
            <value>
                <fullName>Intranet</fullName>
            </value>
            <value>
                <fullName>Autre</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>