force-app/main/default/objects/Projet__c/fields/Chef_de_projet__c.field-meta.xml
<CustomField>
    <fullName>Chef_de_projet__c</fullName>
    <formula>chef_projet__r.FirstName &amp; &quot; &quot; &amp; chef_projet__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Chef de projet</label>
    <type>Text</type>
</CustomField>