force-app/main/default/objects/Projet__c/fields/chef_projet__c.field-meta.xml
<CustomField>
    <fullName>chef_projet__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Chef de projet</description>
    <inlineHelpText>Chef de projet</inlineHelpText>
    <label>👤 Chef de projet</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ChefDeProjet</relationshipName>
    <type>Lookup</type>
</CustomField>