force-app/main/default/objects/Projet__c/fields/completed_tasks__c.field-meta.xml
<CustomField>
    <fullName>completed_tasks__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Total des tâches terminées</description>
    <inlineHelpText>Total des tâches terminées</inlineHelpText>
    <label>Total des tâches terminées</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>