force-app/main/default/objects/Projet__c/fields/CreatedOn__c.field-meta.xml
<CustomField>
    <fullName>CreatedOn__c</fullName>
    <defaultValue>Now()</defaultValue>
    <description>Date de création du projet</description>
    <inlineHelpText>Date de création du projet</inlineHelpText>
    <label>Date de création</label>
    <type>DateTime</type>
</CustomField>