force-app/main/default/objects/Projet__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Description du projet</description>
    <inlineHelpText>Description du projet</inlineHelpText>
    <label>Description du projet</label>
    <type>TextArea</type>
</CustomField>