force-app/main/default/objects/Projet__c/fields/Duree_du_projet__c.field-meta.xml
<CustomField>
    <fullName>Duree_du_projet__c</fullName>
    <description>Durée du projet</description>
    <formula>IF(
    (YEAR(endDate__c) - YEAR(startDate__c)) &gt; 0 &amp;&amp; 
    (MONTH(endDate__c) + (12 * (YEAR(endDate__c) - YEAR(startDate__c))) - MONTH(startDate__c)) &gt;= 12,
    TEXT(FLOOR((MONTH(endDate__c) + (12 * (YEAR(endDate__c) - YEAR(startDate__c))) - MONTH(startDate__c)) / 12)) &amp; &quot; an(s)&quot;,

    IF(
        (MONTH(endDate__c) + (12 * (YEAR(endDate__c) - YEAR(startDate__c))) - MONTH(startDate__c)) &gt; 0,
        TEXT(MONTH(endDate__c) + (12 * (YEAR(endDate__c) - YEAR(startDate__c))) - MONTH(startDate__c)) &amp; &quot; mois&quot;,
        
        TEXT(endDate__c - startDate__c) &amp; &quot; jour(s)&quot;
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Durée du projet</inlineHelpText>
    <label>Durée du projet</label>
    <type>Text</type>
</CustomField>