force-app/main/default/objects/Projet__c/fields/ecart_financier__c.field-meta.xml
<CustomField>
    <fullName>ecart_financier__c</fullName>
    <description>Ecart financier du projet</description>
    <formula>budget_c__c - actual_cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Ecart financier du projet</inlineHelpText>
    <label>ecart financier</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>