force-app/main/default/objects/Projet__c/fields/endDate__c.field-meta.xml
<CustomField>
    <fullName>endDate__c</fullName>
    <description>Date de fin</description>
    <inlineHelpText>Date de fin</inlineHelpText>
    <label>🏁 Fin du projet</label>
    <required>true</required>
    <type>Date</type>
</CustomField>