force-app/main/default/objects/Projet__c/fields/Icone_Evolution__c.field-meta.xml
<CustomField>
    <fullName>Icone_Evolution__c</fullName>
    <description>Progression du projet</description>
    <formula>IF(OR(ISBLANK(progression_pourcentage__c ), progression_pourcentage__c  &lt;= 0), &quot;⚪⚪⚪⚪⚪⚪⚪⚪⚪⚪ 0%&quot;,
    (IF(  progression_pourcentage__c  &gt;= 0.1, &quot;🟢&quot;, &quot;⚪&quot;) &amp;
    IF( progression_pourcentage__c  &gt;= 0.2, &quot;🟢&quot;, &quot;⚪&quot;) &amp;
    IF( progression_pourcentage__c  &gt;= 0.3, &quot;🟢&quot;, &quot;⚪&quot;) &amp;
    IF( progression_pourcentage__c  &gt;= 0.4, &quot;🟢&quot;, &quot;⚪&quot;) &amp;
    IF( progression_pourcentage__c  &gt;= 0.5, &quot;🟢&quot;, &quot;⚪&quot;) &amp;
    IF( progression_pourcentage__c  &gt;= 0.6, &quot;🟢&quot;, &quot;⚪&quot;) &amp;
    IF( progression_pourcentage__c  &gt;= 0.7, &quot;🟢&quot;, &quot;⚪&quot;) &amp;
    IF( progression_pourcentage__c  &gt;= 0.8, &quot;🟢&quot;, &quot;⚪&quot;) &amp;
    IF( progression_pourcentage__c  &gt;= 0.9, &quot;🟢&quot;, &quot;⚪&quot;) &amp;
    IF( progression_pourcentage__c  &gt;= 1.0, &quot;🟢&quot;, &quot;⚪&quot;)) 
    /* Utilisation de ROUND pour limiter les décimales */
    &amp; &quot; &quot; &amp; TEXT(ROUND(progression_pourcentage__c * 100, 2)) &amp; &quot;%&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Progression du projet</inlineHelpText>
    <label>⏳ % de traitement des tâches</label>
    <type>Text</type>
</CustomField>