force-app/main/default/objects/Projet__c/fields/icone_statut__c.field-meta.xml
<CustomField>
    <fullName>icone_statut__c</fullName>
    <description>Statut du projet</description>
    <formula>IF(INCLUDES(Statut__c, &quot;Terminé&quot;), &quot;✅&quot;,
IF(INCLUDES(Statut__c, &quot;En cours&quot;), &quot;🟡&quot;,
IF(INCLUDES(Statut__c, &quot;En attente&quot;), &quot;🔴&quot;, 
&quot;⚪&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Statut du projet</inlineHelpText>
    <label>Icone Statut</label>
    <type>Text</type>
</CustomField>