force-app/main/default/objects/Projet__c/fields/modifiedOn__c.field-meta.xml
<CustomField>
    <fullName>modifiedOn__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <description>Date de modification</description>
    <inlineHelpText>Date de modification</inlineHelpText>
    <label>Date de  modification</label>
    <type>DateTime</type>
</CustomField>