force-app/main/default/objects/Projet__c/fields/Nom_Projet_Alerte_c__c.field-meta.xml
<CustomField>
    <fullName>Nom_Projet_Alerte_c__c</fullName>
    <description>Nom Projet Alerte</description>
    <inlineHelpText>Nom Projet Alerte</inlineHelpText>
    <label>Nom_Projet_Alerte__c</label>
    <length>250</length>
    <type>Text</type>
</CustomField>