force-app/main/default/objects/Projet__c/fields/overdueTasks__c.field-meta.xml
<CustomField>
    <fullName>overdueTasks__c</fullName>
    <description>Tâches en retard</description>
    <inlineHelpText>Tâches en retard</inlineHelpText>
    <label>Total des tâches en retard</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>