force-app/main/default/objects/Projet__c/fields/progression_pourcentage__c.field-meta.xml
<CustomField>
    <fullName>progression_pourcentage__c</fullName>
    <description>% Progression Projet</description>
    <formula>IF(
    total_taches__c &gt; 0,
    (Total_Progress_Sum__c / total_taches__c) / 100 ,
    0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>% Progression projet</inlineHelpText>
    <label>Taux d&apos;avancement</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>