force-app/main/default/objects/Projet__c/fields/startDate__c.field-meta.xml
<CustomField>
    <fullName>startDate__c</fullName>
    <description>Date de début du projet</description>
    <inlineHelpText>Date de début du projet</inlineHelpText>
    <label>🚀 Début du projet</label>
    <required>true</required>
    <type>Date</type>
</CustomField>