force-app/main/default/objects/Projet__c/fields/StatusB__c.field-meta.xml
<CustomField>
    <fullName>StatusB__c</fullName>
    <label>StatusB</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Terminer</fullName>
            </value>
            <value>
                <fullName>En Cours</fullName>
                <default>true</default>
                <label>En Cours</label>
            </value>
            <value>
                <fullName>En attente</fullName>
            </value>
            <value>
                <fullName>Annulé</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>