force-app/main/default/objects/Projet__c/fields/Statut__c.field-meta.xml
<CustomField>
    <fullName>Statut__c</fullName>
    <defaultValue>&quot;En attente&quot;</defaultValue>
    <description>Statut du projet</description>
    <inlineHelpText>Statut du projet</inlineHelpText>
    <label>🚦 Statut</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Annulé</fullName>
            </value>
            <value>
                <fullName>En cours</fullName>
            </value>
            <value>
                <fullName>Stand by</fullName>
                <default>true</default>
                <label>En attente</label>
            </value>
            <value>
                <fullName>Terminé</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>