force-app/main/default/objects/Projet__c/fields/Tasks_in_progress__c.field-meta.xml
<CustomField>
    <fullName>Tasks_in_progress__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Tâches en cours</description>
    <inlineHelpText>Tâches en cours</inlineHelpText>
    <label>Total des  tâches en cours</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>