force-app/main/default/objects/Projet__c/fields/Taux_de_consommation_du_temps__c.field-meta.xml
<CustomField>
    <fullName>Taux_de_consommation_du_temps__c</fullName>
    <description>Taux de consommation de temps</description>
    <formula>IF(
  OR(ISBLANK(startDate__c), ISBLANK(endDate__c)),
  &quot;⬜ Dates manquantes&quot;,
  
  IF(
    /* Si avant la date de début ET pas encore &quot;En cours&quot; -&gt; 0% fixe */
    AND(TODAY() &lt; startDate__c, NOT(INCLUDES(Statut__c, &quot;En cours&quot;))),
    &quot;🌱 Projet en préparation (0%)&quot;,
    
    IF(
      TODAY() &gt; endDate__c,
      &quot;❌ DÉLAI DÉPASSÉ (100%)&quot;,
      
      /* On s&apos;assure que le ratio ne descend pas en dessous de 0 */
      IF(
        (TODAY() - startDate__c) / (endDate__c - startDate__c) &lt; 0.25, &quot;✅ &quot;, 
        IF((TODAY() - startDate__c) / (endDate__c - startDate__c) &lt; 0.75, &quot;⚠️ &quot;, &quot;🔥 &quot;)
      ) &amp;
      /* MAX(0, ...) empêche les pourcentages négatifs */
      TEXT(ROUND(MAX(0, (TODAY() - startDate__c) / (endDate__c - startDate__c)) * 100, 0)) &amp; &quot;% consommé&quot; &amp;
      BR() &amp;
      
      CASE(FLOOR(MAX(0, (TODAY() - startDate__c) / (endDate__c - startDate__c)) * 4),
        0, &quot;🌑🌘🌗🌖&quot;, 
        1, &quot;🌕🌑🌘🌗&quot;,
        2, &quot;🌕🌕🌑🌘&quot;,
        3, &quot;🌕🌕🌕🌑&quot;,
        &quot;🌕🌕🌕🌕&quot;
      )
    )
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Taux de consommation de temps</inlineHelpText>
    <label>Taux de consommation du temps</label>
    <type>Text</type>
</CustomField>