force-app/main/default/objects/Projet__c/fields/Total_des_t_ches_annul_es__c.field-meta.xml
<CustomField>
    <fullName>Total_des_t_ches_annul_es__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Total des tâches annulées</description>
    <inlineHelpText>Total des tâches annulées</inlineHelpText>
    <label>Total des tâches annulées</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>