force-app/main/default/objects/Projet__c/fields/Total_des_taches_en_attente__c.field-meta.xml
<CustomField>
    <fullName>Total_des_taches_en_attente__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Total tâches en attente</description>
    <inlineHelpText>Total tâches en attente</inlineHelpText>
    <label>Total des tâches en attente</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>