force-app/main/default/objects/Projet__c/fields/Total_des_taches_suspendues__c.field-meta.xml
<CustomField>
    <fullName>Total_des_taches_suspendues__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total des tâches suspendues</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>