force-app/main/default/objects/Projet__c/fields/Total_Progress_Sum__c.field-meta.xml
<CustomField>
    <fullName>Total_Progress_Sum__c</fullName>
    <description>Somme de progression des tâches</description>
    <inlineHelpText>Somme de progression des tâches</inlineHelpText>
    <label>Total des progressions</label>
    <precision>6</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>