force-app/main/default/objects/Projet__c/fields/total_taches__c.field-meta.xml
<CustomField>
    <fullName>total_taches__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Total des tâches du projet</description>
    <inlineHelpText>Total des tâches du projet</inlineHelpText>
    <label>Total des tâches</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>