force-app/main/default/objects/Projet__c/fields/type_de_projet_formule__c.field-meta.xml
<CustomField>
    <fullName>type_de_projet_formule__c</fullName>
    <description>Type de projet</description>
    <formula>CASE(TEXT(Category__c),
  &quot;Digitalisation des PME&quot;, &quot;📱 Digitalisation&quot;,
  &quot;CMS&quot;, &quot;🌐 CMS / Site Web&quot;,
  &quot;Développement&quot;, &quot;💻 Développement&quot;,
  &quot;Tableaux de Bord de Performance (BI)&quot;, &quot;📊 Performance BI&quot;,
  &quot;Intranet&quot;, &quot;🏠 Intranet&quot;,
  &quot;📁 Autre&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Type de projet</inlineHelpText>
    <label>📁 type de projet</label>
    <type>Text</type>
</CustomField>