force-app/main/default/objects/Projet__c/validationRules/Block_modif_projet_si_statut_en_cours.validationRule-meta.xml
<ValidationRule>
    <fullName>Block_modif_projet_si_statut_en_cours</fullName>
    <active>true</active>
    <description>Bloquer toute modifier du projet si son statut est en attente</description>
    <errorConditionFormula>AND(
   NOT(ISNEW()),
   NOT(INCLUDES(Statut__c, &quot;En cours&quot;)),
   NOT(ISCHANGED(Statut__c))
)</errorConditionFormula>
    <errorMessage>La modification des informations du projet n&apos;est possible que si il est en cours,
changez d&apos;abord son statut pour modifier les autres</errorMessage>
</ValidationRule>