force-app/main/default/objects/Projet__c/validationRules/Check_End_date_project.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_End_date_project</fullName>
    <active>true</active>
    <description>Vérifier si la date de fin du projet n&apos;est pas inférieure  à la date du jour</description>
    <errorConditionFormula>AND(
    OR(ISNEW(), ISCHANGED(endDate__c)),
    endDate__c &lt; TODAY()
)</errorConditionFormula>
    <errorMessage>La date fin du projet  ne peut être inférieure à la date du jour</errorMessage>
</ValidationRule>