force-app/main/default/objects/Projet__c/validationRules/check_if_start_date_less_than_end_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>check_if_start_date_less_than_end_Date</fullName>
    <active>true</active>
    <description>vérifier que la date de début du projet soit inférieure à la date du fin du projet</description>
    <errorConditionFormula>endDate__c &lt; startDate__c</errorConditionFormula>
    <errorMessage>la date de fin  du projet ne peut pas être inférieure à la date de début</errorMessage>
</ValidationRule>