force-app/main/default/objects/Projet__c/validationRules/Check_start_Date_project.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_start_Date_project</fullName>
    <active>true</active>
    <description>La date de début du projet doit être supérireure ou égale à la date du jour</description>
    <errorConditionFormula>OR(AND(ISNEW(), startDate__c &lt; TODAY()), AND(ISCHANGED(startDate__c), startDate__c &lt; TODAY()))</errorConditionFormula>
    <errorMessage>La date de début ne peut êtr inférieure à la date du jour</errorMessage>
</ValidationRule>