force-app/main/default/objects/Projet__c/validationRules/Force_the_choice_of_one_value_for_statut.validationRule-meta.xml
<ValidationRule>
    <fullName>Force_the_choice_of_one_value_for_statut</fullName>
    <active>true</active>
    <description>Forcer le choix d&apos;une seule valeur pour la multi picklist</description>
    <errorConditionFormula>PICKLISTCOUNT(Statut__c) &gt; 1</errorConditionFormula>
    <errorMessage>Veuillez choisir une seule valeur pour le statut</errorMessage>
</ValidationRule>