force-app/main/default/objects/Projet__c/validationRules/Verrouillage_Projet_Termine.validationRule-meta.xml
<ValidationRule>
    <fullName>Verrouillage_Projet_Termine</fullName>
    <active>true</active>
    <description>Empêche toute modification du projet si il est terminé . Seul l&apos;administrateur peut le modifier</description>
    <errorConditionFormula>AND(
   INCLUDES(Statut__c, &quot;Terminé&quot;),
   $Profile.Name &lt;&gt; &quot;System Administrator&quot;,
   $Profile.Name &lt;&gt; &quot;Gerant(e) Kiliogene Abidjan&quot;,
   $Profile.Name &lt;&gt; &quot;Business Analyst&quot;,
   $Profile.Name &lt;&gt; &quot;Responsable technique&quot;
)</errorConditionFormula>
    <errorMessage>le projet est terminé , aucune modification n&apos;est permise</errorMessage>
</ValidationRule>