force-app/main/default/objects/Projet__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>LAST_UPDATE</columns>
    <columns>NAME</columns>
    <columns>Statut__c</columns>
    <columns>health_project__c</columns>
    <columns>Icone_Evolution__c</columns>
    <columns>startDate__c</columns>
    <columns>endDate__c</columns>
    <columns>budget_c__c</columns>
    <columns>actual_cost__c</columns>
    <columns>chef_projet__c</columns>
    <columns>Account__c</columns>
    <filterScope>Everything</filterScope>
    <label>📑 Tous les projets</label>
</ListView>