force-app/main/default/objects/Projet__c/listViews/Projets_en_attente.listView-meta.xml
<ListView>
    <fullName>Projets_en_attente</fullName>
    <columns>LAST_UPDATE</columns>
    <columns>NAME</columns>
    <columns>Statut__c</columns>
    <columns>health_project__c</columns>
    <columns>Icone_Evolution__c</columns>
    <columns>startDate__c</columns>
    <columns>endDate__c</columns>
    <columns>actual_cost__c</columns>
    <columns>chef_projet__c</columns>
    <columns>Account__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Statut__c</field>
        <operation>equals</operation>
        <value>Stand by</value>
    </filters>
    <label>⏸️ Projets en attente</label>
</ListView>