force-app/main/default/objects/Projet__c/listViews/Projets_en_retard.listView-meta.xml
<ListView>
    <fullName>Projets_en_retard</fullName>
    <columns>LAST_UPDATE</columns>
    <columns>NAME</columns>
    <columns>health_project__c</columns>
    <columns>Icone_Evolution__c</columns>
    <columns>startDate__c</columns>
    <columns>endDate__c</columns>
    <columns>actual_cost__c</columns>
    <columns>Account__c</columns>
    <columns>chef_projet__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>health_project__c</field>
        <operation>contains</operation>
        <value>retard</value>
    </filters>
    <label>🚨 Projets en retard</label>
</ListView>