force-app/main/default/objects/Projet__c/listViews/Projets_termin_s.listView-meta.xml
<ListView>
    <fullName>Projets_termin_s</fullName>
    <columns>UPDATEDBY_USER</columns>
    <columns>NAME</columns>
    <columns>Statut__c</columns>
    <columns>health_project__c</columns>
    <columns>Icone_Evolution__c</columns>
    <columns>startDate__c</columns>
    <columns>endDate__c</columns>
    <columns>actual_cost__c</columns>
    <columns>Account__c</columns>
    <columns>chef_projet__c</columns>
    <filterScope>Everything</filterScope>
    <label>✅ Projets terminés</label>
</ListView>